<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".instruction">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inn"
                android:textColor="#673AB7"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/it"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/b"
                android:layout_marginBottom="@dimen/d"
                android:text="@string/dddd" />

            <TextView
                android:id="@+id/ttt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d"
                android:layout_marginBottom="@dimen/d"
                android:text="@string/v"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d"
                android:layout_marginBottom="@dimen/big"
                android:text="@string/nm" />

            <Button
                android:id="@+id/b3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big"
                android:text="@string/bb" />
        </LinearLayout>
    </FrameLayout>
</layout>