<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/t1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/b"
                android:text="@string/e"
                android:textColor="#673AB7"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/em"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/b"
                android:ems="10"
                android:hint="@string/ee"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                android:autofillHints="" />

            <TextView
                android:id="@+id/tt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/b"
                android:text="@string/p"
                android:textColor="#673AB7"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/pa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/b"
                android:layout_marginBottom="@dimen/b"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/paas"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <Button
                android:id="@+id/b1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big"
                android:text="@string/l" />

            <Button
                android:id="@+id/b2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d"
                android:text="@string/ll" />
        </LinearLayout>

    </FrameLayout>
</layout>